2011-02-03  Era Eriksson  <era+tramp@iki.fi>  (tiny change)

	* tramp.texi, trampinst.texi:
	Replace "delimet" with "delimit" globally.
	Replace "explicite" with "explicit" globally.
	Replace "instead of" with "instead" where there was nothing after "of".
	Audit use of comma before interrogative pronoun, "that", or "which".
	Minor word order, spelling, wording changes.

2011-02-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Mention problems with
	WinSSHD.

2010-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods): Add "ksu" method.
	(Remote processes): Add example with remote `default-directory'.

2010-11-20  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.0 released.

2010-11-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote shell setup): New item "Interactive shell
	prompt".  Reported by Christian Millour <cm@abtela.com>.
	(Remote shell setup, Remote processes): Use @code{} for
	environment variables.

2010-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Mention
	remote-file-name-inhibit-cache.

2010-09-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods): Remove "ssh1_old", "ssh2_old" and
	"fish" methods.
	(External methods): Remove "scp1_old" and "scp2_old" methods.

	* tramp_ja.texi: Remove file.

2010-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Remove japanese manual creation.

	* tramp.texi:
	* trampinst.texi: Remove Japanese manual.

	* trampver.texi.in: Remove japanesemanual.

2010-08-23  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.19 released.

2010-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (External packages): File attributes cache flushing
	for asynchronous processes.

2010-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Traces and Profiles): Describe verbose level 9.

2010-06-24  Glenn Morris  <rgm@gnu.org>
