@@ -28,11 +28,6 @@
 @set emacsgw
 @end ifclear
 
-@c Whether or not describe IMAP support.
-@ifclear noemacsimap
-@set emacsimap
-@end ifclear
-
 @c Some flags which make the text independent on the (X)Emacs flavor.
 @c "emacs" resp "xemacs" are set in the Makefile.  Default is "emacs".
 @ifclear emacs
