@@ -1,3 +1,14 @@
+2011-02-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Makefile.in: Remove emacsimap handling.
+
+	* tramp.texi (History): Remove IMAP support.
+	(External methods, Frequently Asked Questions): Remove `imap' and
+	`imaps' methods.
+	(Password handling): Remove IMAP entries for ~/.authinfo.gpg.
+
+	* trampver.texi.in: Remove default value of `emacsimap'.
+
 2011-02-03  Era Eriksson  <era+tramp@iki.fi>  (tiny change)
 
 	* tramp.texi, trampinst.texi:
